<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_above="@+id/login_facebook_container"
  android:layout_alignParentTop="true">

    <LinearLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:animateLayoutChanges="true"
      android:orientation="vertical"
      tools:context=".EmailLoginActivity">

        <com.shootr.mobile.ui.widgets.FloatLabelLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginTop="16dp"
          app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText android:id="@+id/email_login_username_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/activity_login_email_id_hint"
              android:imeOptions="actionNext"
              android:inputType="textEmailAddress|textNoSuggestions">

                <requestFocus />
            </EditText>

        </com.shootr.mobile.ui.widgets.FloatLabelLayout>

        <com.shootr.mobile.ui.widgets.FloatLabelLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginTop="8dp"
          app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText android:id="@+id/email_login_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fontFamily="sans-serif"
              android:hint="@string/activity_login_email_password_hint"
              android:imeOptions="actionDone"
              android:inputType="textPassword">

            </EditText>
        </com.shootr.mobile.ui.widgets.FloatLabelLayout>

        <FrameLayout android:id="@+id/email_login_button_container"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:animateLayoutChanges="true"
          android:paddingRight="16dp">

            <TextView android:id="@+id/email_login_button"
              style="@style/BorderlessButton.Primary"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="?selectableItemBackground"
              android:text="@string/activity_login_email_button"
              android:textSize="14sp" />

            <ProgressBar android:id="@+id/login_loading"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:indeterminate="true"
              android:visibility="gone" />

        </FrameLayout>

        <TextView android:id="@+id/email_login_forgot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/keyline_1"
          android:background="?selectableItemBackground"
          android:gravity="center_vertical"
          android:text="@string/activity_login_email_forgot"
          android:textColor="@color/primary_selector" />

        <!--<ProgressBar
            android:id="@+id/email_login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:visibility="visible"
            />-->

        <Button android:id="@+id/login_btn_facebook"
          android:layout_width="wrap_content"
          android:layout_height="32dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="8dp"
          android:background="@color/transparent"
          android:gravity="left|center_vertical"
          android:text="@string/activity_login_register_facebook"
          android:textColor="@color/primary"
          android:textSize="14sp"
          android:visibility="gone" />
    </LinearLayout>
</ScrollView>