...
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel"
        >

      <EditText
          android:id="@+id/new_stream_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/new_stream_title_label"
          android:imeOptions="actionDone"
          android:inputType="text|textCapSentences|textNoSuggestions"
          android:lines="1"
          android:maxLength="50"
          android:nextFocusDown="@+id/new_stream_description"
          android:singleLine="true"
          tools:text="My New Stream"
          />

    </com.shootr.mobile.ui.widgets.FloatLabelLayout>

...
