<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
      android:id="@+id/menu_done"
      android:icon="@drawable/ic_action_done_enabled"
      android:title="@string/profile_edit_done_button"
      app:showAsAction="always" />
</menu>